# alife

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  simulation.cfg
src/: AlifeSim.cpp  AlifeSim.h  Animal.cpp  Animal.h  Brain.cpp  Brain.h  Carnivor.cpp  Carnivor.h  Configs.cpp  Configs.h  Eyes.cpp  Eyes.h  Herbivor.cpp  Herbivor.h  IdGenerator.cpp  IdGenerator.h  LivingOrganisms.cpp  LivingOrganisms.h  Plant.cpp  Plant.h  SupportTypes.h  World.cpp  World.h  main.cpp  simulation.cfg
tests/: CMakeLists.txt
tests/brain/: CMakeLists.txt  brain_test.cpp
tests/eyes/: CMakeLists.txt  eyes_test.cpp
